--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 
         <div id="hero-buttons">
           <div id="hero-button-left">
-            <a id="btn-link" href="#">Download <span class="btn-version"> v1.3 </span></a>
+            Download <span class="btn-version"> v1.3 </span>
+            <!-- <a id="btn-link" href="#">Download <span class="btn-version"> v1.3 </span></a> -->
           </div>
 
           <div id="hero-button-right">
-            <a id="btn-link" href="#"> What is it? </a>
+            What is it?
+            <!-- <a id="btn-link" href="#"> What is it? </a> -->
           </div>
         </div>
 
@@ -97,7 +99,7 @@
       </div>
 
       <div id="experience-right-button">
-        <a id="btn-link" href="#">Download <span class="btn-version"> v1.3 </span> </span></a>
+        <a id="btn-link" href="#">Download <span class="btn-version-footer"> v1.3 </span> </span></a>
           
       </div>
 
